--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     margin: 0;
 }
 body{
-    background: pink;
-    color: crimson;
+    background: #eee;
+    color: #333;
 }
 a{
-    color: orange;
+    color: #459;
 }
